@@ -1,6 +1,7 @@
 package com.yugabyte.yw.controllers;
 
 import static com.yugabyte.yw.common.AssertHelper.assertBadRequest;
+import static com.yugabyte.yw.common.AssertHelper.assertForbidden;
 import static com.yugabyte.yw.common.AssertHelper.assertOk;
 import static com.yugabyte.yw.common.AssertHelper.assertPlatformException;
 import static com.yugabyte.yw.common.FakeDBApplication.buildTaskInfo;
@@ -12,7 +13,6 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.ArgumentMatchers.nullable;
@@ -33,6 +33,7 @@ import com.yugabyte.yw.common.PlatformGuiceApplicationBaseTest;
 import com.yugabyte.yw.common.PlatformServiceException;
 import com.yugabyte.yw.common.SoftwareUpgradeHelper;
 import com.yugabyte.yw.common.TestHelper;
+import com.yugabyte.yw.common.XClusterCreatePrecheck;
 import com.yugabyte.yw.common.XClusterUniverseService;
 import com.yugabyte.yw.common.audit.AuditService;
 import com.yugabyte.yw.common.backuprestore.BackupHelper;
@@ -65,7 +66,7 @@ import com.yugabyte.yw.models.XClusterNamespaceConfig;
 import com.yugabyte.yw.models.configs.CustomerConfig;
 import com.yugabyte.yw.models.helpers.TaskType;
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
@@ -119,7 +120,7 @@ public class DrConfigControllerTest extends PlatformGuiceApplicationBaseTest {
   private String authToken;
   private BootstrapBackupParams backupRequestParams;
   private SettableRuntimeConfigFactory settableRuntimeConfigFactory;
-  private String namespaceId;
+  private final List<String> namespaceIds = new ArrayList<>();
 
   private DrConfigController drConfigController;
 
@@ -132,42 +133,45 @@ public class DrConfigControllerTest extends PlatformGuiceApplicationBaseTest {
     return CustomerConfig.createWithFormData(customer.getUuid(), formData);
   }
 
-  private DrConfigCreateForm createDefaultCreateForm(String name) {
+  private DrConfigCreateForm createDefaultCreateForm(String name) throws Exception {
+    return createDefaultCreateForm(name, namespaceIds);
+  }
+
+  private DrConfigCreateForm createDefaultCreateForm(String name, Collection<String> dbIds)
+      throws Exception {
     DrConfigCreateForm createForm = new DrConfigCreateForm();
     createForm.name = name;
     createForm.sourceUniverseUUID = sourceUniverse.getUniverseUUID();
     createForm.targetUniverseUUID = targetUniverse.getUniverseUUID();
-    createForm.dbs = Set.of(namespaceId);
+    createForm.dbs = new HashSet<>(dbIds);
     createForm.bootstrapParams = new RestartBootstrapParams();
     createForm.bootstrapParams.backupRequestParams = backupRequestParams;
 
     List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo> tableInfoList = new ArrayList<>();
-    MasterDdlOuterClass.ListTablesResponsePB.TableInfo.Builder table1TableInfoBuilder =
-        MasterDdlOuterClass.ListTablesResponsePB.TableInfo.newBuilder();
-    table1TableInfoBuilder.setTableType(TableType.PGSQL_TABLE_TYPE);
-    table1TableInfoBuilder.setId(ByteString.copyFromUtf8(UUID.randomUUID().toString()));
-    table1TableInfoBuilder.setName("table_1");
-    table1TableInfoBuilder.setRelationType(RelationType.USER_TABLE_RELATION);
-    table1TableInfoBuilder.setNamespace(
-        MasterTypes.NamespaceIdentifierPB.newBuilder()
-            .setName("db1")
-            .setId(ByteString.copyFromUtf8(namespaceId))
-            .build());
-    tableInfoList.add(table1TableInfoBuilder.build());
-
-    try {
-      ListTablesResponse mockListTablesResponse = mock(ListTablesResponse.class);
-      when(mockListTablesResponse.getTableInfoList()).thenReturn(tableInfoList);
-      when(mockYBClient.getTablesList(nullable(String.class), eq(false), nullable(String.class)))
-          .thenReturn(mockListTablesResponse);
-
-      GetMasterClusterConfigResponse fakeClusterConfigResponse =
-          new GetMasterClusterConfigResponse(
-              0, "", CatalogEntityInfo.SysClusterConfigEntryPB.getDefaultInstance(), null);
-      when(mockYBClient.getMasterClusterConfig()).thenReturn(fakeClusterConfigResponse);
-    } catch (Exception e) {
-      e.printStackTrace();
+    for (String namespaceId : namespaceIds) {
+      MasterDdlOuterClass.ListTablesResponsePB.TableInfo.Builder table1TableInfoBuilder =
+          MasterDdlOuterClass.ListTablesResponsePB.TableInfo.newBuilder()
+              .setTableType(TableType.PGSQL_TABLE_TYPE)
+              .setId(ByteString.copyFromUtf8(UUID.randomUUID().toString()))
+              .setName("table_1")
+              .setRelationType(RelationType.USER_TABLE_RELATION)
+              .setNamespace(
+                  MasterTypes.NamespaceIdentifierPB.newBuilder()
+                      .setName(namespaceId)
+                      .setId(ByteString.copyFromUtf8(namespaceId))
+                      .build());
+      tableInfoList.add(table1TableInfoBuilder.build());
     }
+
+    ListTablesResponse mockListTablesResponse = mock(ListTablesResponse.class);
+    when(mockListTablesResponse.getTableInfoList()).thenReturn(tableInfoList);
+    when(mockYBClient.getTablesList(nullable(String.class), eq(false), nullable(String.class)))
+        .thenReturn(mockListTablesResponse);
+
+    GetMasterClusterConfigResponse fakeClusterConfigResponse =
+        new GetMasterClusterConfigResponse(
+            0, "", CatalogEntityInfo.SysClusterConfigEntryPB.getDefaultInstance(), null);
+    when(mockYBClient.getMasterClusterConfig()).thenReturn(fakeClusterConfigResponse);
 
     return createForm;
   }
@@ -203,7 +207,7 @@ public class DrConfigControllerTest extends PlatformGuiceApplicationBaseTest {
     TestHelper.updateUniverseVersion(sourceUniverse, "2.23.0.0-b394");
     targetUniverse = createUniverse("target Universe");
     TestHelper.updateUniverseVersion(targetUniverse, "2.23.0.0-b394");
-    namespaceId = UUID.randomUUID().toString().replace("-", "");
+    namespaceIds.add(UUID.randomUUID().toString().replace("-", ""));
 
     backupRequestParams = new BootstrapBackupParams();
     backupRequestParams.storageConfigUUID = config.getConfigUUID();
@@ -220,12 +224,13 @@ public class DrConfigControllerTest extends PlatformGuiceApplicationBaseTest {
             mockAutoFlagUtil,
             mockXClusterScheduler,
             null,
-            mockSoftwareUpgradeHelper);
+            mockSoftwareUpgradeHelper,
+            new XClusterCreatePrecheck(mockYBClientService, null, null, mockSoftwareUpgradeHelper));
   }
 
   @Test
   // Runtime config `yb.xcluster.db_scoped.creationEnabled` = false.
-  public void testCreateSuccess() {
+  public void testCreateSuccess() throws Exception {
     settableRuntimeConfigFactory
         .globalRuntimeConf()
         .setValue("yb.xcluster.db_scoped.creationEnabled", "false");
@@ -245,10 +250,7 @@ public class DrConfigControllerTest extends PlatformGuiceApplicationBaseTest {
             CommonTypes.TableType.PGSQL_TABLE_TYPE,
             Collections.emptyList(),
             false);
-    try {
-      when(mockYBClient.getTableSchemaByUUID(any())).thenReturn(mockTableSchemaResponseTable1);
-    } catch (Exception ignored) {
-    }
+    when(mockYBClient.getTableSchemaByUUID(any())).thenReturn(mockTableSchemaResponseTable1);
     Result result =
         doRequestWithAuthTokenAndBody(
             "POST",
@@ -264,12 +266,12 @@ public class DrConfigControllerTest extends PlatformGuiceApplicationBaseTest {
     DrConfig drConfig = drConfigs.get(0);
     assertNotNull(drConfig);
     XClusterConfig xClusterConfig = drConfig.getActiveXClusterConfig();
-    assertEquals(xClusterConfig.getType(), ConfigType.Txn);
+    assertEquals(ConfigType.Txn, xClusterConfig.getType());
   }
 
   @Test
   // Runtime config `yb.xcluster.db_scoped.creationEnabled` = true for source universe.
-  public void testCreateDbScopedSuccess() {
+  public void testCreateDbScopedSuccess() throws Exception {
     settableRuntimeConfigFactory
         .forUniverse(sourceUniverse)
         .setValue("yb.xcluster.db_scoped.creationEnabled", "true");
@@ -294,11 +296,11 @@ public class DrConfigControllerTest extends PlatformGuiceApplicationBaseTest {
     DrConfig drConfig = drConfigs.get(0);
     assertNotNull(drConfig);
     XClusterConfig xClusterConfig = drConfig.getActiveXClusterConfig();
-    assertEquals(xClusterConfig.getType(), ConfigType.Db);
+    assertEquals(ConfigType.Db, xClusterConfig.getType());
   }
 
   @Test
-  public void testCreateDRConfigWhenUpgradeIsInProgress() {
+  public void testCreateDRConfigWhenUpgradeIsInProgress() throws Exception {
     targetUniverse =
         Universe.saveDetails(
             targetUniverse.getUniverseUUID(),
@@ -328,8 +330,52 @@ public class DrConfigControllerTest extends PlatformGuiceApplicationBaseTest {
   }
 
   @Test
+  public void testCreateDbScopedWithEmptySourceTableNotOnTarget() throws Exception {
+    settableRuntimeConfigFactory
+        .globalRuntimeConf()
+        .setValue("yb.xcluster.db_scoped.creationEnabled", "true");
+    DrConfigCreateForm data = createDefaultCreateForm("dbScopedDR");
+
+    List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo> sourceTableInfo = new ArrayList<>();
+    for (String namespaceId : namespaceIds) {
+      MasterDdlOuterClass.ListTablesResponsePB.TableInfo.Builder tiBuilder =
+          MasterDdlOuterClass.ListTablesResponsePB.TableInfo.newBuilder()
+              .setTableType(TableType.PGSQL_TABLE_TYPE)
+              .setId(ByteString.copyFromUtf8(UUID.randomUUID().toString()))
+              .setName("table_1")
+              .setRelationType(RelationType.USER_TABLE_RELATION)
+              .setNamespace(
+                  MasterTypes.NamespaceIdentifierPB.newBuilder()
+                      .setName(namespaceId)
+                      .setId(ByteString.copyFromUtf8(namespaceId))
+                      .build());
+      sourceTableInfo.add(tiBuilder.build());
+    }
+
+    ListTablesResponse sourceTableListResponse = mock(ListTablesResponse.class);
+    when(sourceTableListResponse.getTableInfoList()).thenReturn(sourceTableInfo);
+    ListTablesResponse targetTableListResponse = mock(ListTablesResponse.class);
+    when(targetTableListResponse.getTableInfoList()).thenReturn(List.of());
+    when(mockYBClient.getTablesList(nullable(String.class), eq(false), nullable(String.class)))
+        .thenReturn(sourceTableListResponse)
+        .thenReturn(targetTableListResponse);
+
+    Result result =
+        assertPlatformException(
+            () ->
+                doRequestWithAuthTokenAndBody(
+                    "POST",
+                    "/api/customers/" + defaultCustomer.getUuid() + "/dr_configs",
+                    authToken,
+                    Json.toJson(data)));
+
+    assertForbidden(
+        result, "Some tables are empty on the source universe and don't exist on the target");
+  }
+
+  @Test
   // Only target universe has db scoped runtime config set as true.
-  public void testNonDbScopedCreate() {
+  public void testNonDbScopedCreate() throws Exception {
     settableRuntimeConfigFactory
         .forUniverse(sourceUniverse)
         .setValue("yb.xcluster.db_scoped.creationEnabled", "false");
@@ -349,10 +395,7 @@ public class DrConfigControllerTest extends PlatformGuiceApplicationBaseTest {
             CommonTypes.TableType.PGSQL_TABLE_TYPE,
             Collections.emptyList(),
             false);
-    try {
-      when(mockYBClient.getTableSchemaByUUID(any())).thenReturn(mockTableSchemaResponseTable1);
-    } catch (Exception ignored) {
-    }
+    when(mockYBClient.getTableSchemaByUUID(any())).thenReturn(mockTableSchemaResponseTable1);
     DrConfigCreateForm data = createDefaultCreateForm("txnDR");
     UUID taskUUID = buildTaskInfo(null, TaskType.CreateDrConfig);
     when(mockCommissioner.submit(any(), any())).thenReturn(taskUUID);
@@ -371,16 +414,21 @@ public class DrConfigControllerTest extends PlatformGuiceApplicationBaseTest {
     DrConfig drConfig = drConfigs.get(0);
     assertNotNull(drConfig);
     XClusterConfig xClusterConfig = drConfig.getActiveXClusterConfig();
-    assertEquals(xClusterConfig.getType(), ConfigType.Txn);
+    assertEquals(ConfigType.Txn, xClusterConfig.getType());
   }
 
   @Test
   // Runtime config `yb.xcluster.db_scoped.creationEnabled` = true.
-  public void testSetDatabasesDbScopedSuccess() {
+  public void testSetDatabasesDbScopedSuccess() throws Exception {
     settableRuntimeConfigFactory
         .globalRuntimeConf()
         .setValue("yb.xcluster.db_scoped.creationEnabled", "true");
-    DrConfigCreateForm data = createDefaultCreateForm("dbScopedDR");
+
+    for (int i = 0; i < 2; i++) {
+      namespaceIds.add(UUID.randomUUID().toString().replace("-", ""));
+    }
+
+    DrConfigCreateForm data = createDefaultCreateForm("dbScopedDR", Set.of(namespaceIds.get(0)));
     UUID taskUUID = buildTaskInfo(null, TaskType.CreateDrConfig);
     when(mockCommissioner.submit(any(), any())).thenReturn(taskUUID);
     Result result =
@@ -399,7 +447,7 @@ public class DrConfigControllerTest extends PlatformGuiceApplicationBaseTest {
     assertNotNull(drConfig);
     UUID drConfigId = drConfig.getUuid();
     DrConfigSetDatabasesForm setDatabasesData = new DrConfigSetDatabasesForm();
-    setDatabasesData.dbs = new HashSet<>(Set.of("db1", "db2"));
+    setDatabasesData.dbs = Set.of(namespaceIds.get(0), namespaceIds.get(1));
     XClusterConfig xClusterConfig = drConfig.getActiveXClusterConfig();
     xClusterConfig.updateStatus(XClusterConfigStatusType.Running);
     drConfig.setState(State.Replicating);
@@ -421,7 +469,7 @@ public class DrConfigControllerTest extends PlatformGuiceApplicationBaseTest {
     assertOk(result);
 
     // Try adding a database and deleting a database.
-    setDatabasesData.dbs = new HashSet<>(Set.of("db2", "db3"));
+    setDatabasesData.dbs = Set.of(namespaceIds.get(1), namespaceIds.get(2));
     xClusterConfig = drConfig.getActiveXClusterConfig();
     xClusterConfig.updateStatus(XClusterConfigStatusType.Running);
 
@@ -443,11 +491,11 @@ public class DrConfigControllerTest extends PlatformGuiceApplicationBaseTest {
 
   @Test
   // Runtime config `yb.xcluster.db_scoped.creationEnabled` = true.
-  public void testSetDatabasesDbScopedSuccessWhenUpgradeIsInProgress() {
-
+  public void testSetDatabasesDbScopedSuccessWhenUpgradeIsInProgress() throws Exception {
     settableRuntimeConfigFactory
         .globalRuntimeConf()
         .setValue("yb.xcluster.db_scoped.creationEnabled", "true");
+    namespaceIds.add(UUID.randomUUID().toString().replace("-", ""));
     DrConfigCreateForm data = createDefaultCreateForm("dbScopedDR");
     UUID taskUUID = buildTaskInfo(null, TaskType.CreateDrConfig);
     when(mockCommissioner.submit(any(), any())).thenReturn(taskUUID);
@@ -467,7 +515,7 @@ public class DrConfigControllerTest extends PlatformGuiceApplicationBaseTest {
     assertNotNull(drConfig);
     UUID drConfigId = drConfig.getUuid();
     DrConfigSetDatabasesForm setDatabasesData = new DrConfigSetDatabasesForm();
-    setDatabasesData.dbs = new HashSet<>(Set.of("db1", "db2"));
+    setDatabasesData.dbs = new HashSet<>(namespaceIds);
     XClusterConfig xClusterConfig = drConfig.getActiveXClusterConfig();
     xClusterConfig.updateStatus(XClusterConfigStatusType.Running);
     drConfig.setState(State.Replicating);
@@ -500,7 +548,7 @@ public class DrConfigControllerTest extends PlatformGuiceApplicationBaseTest {
 
   @Test
   // Runtime config `yb.xcluster.db_scoped.creationEnabled` = true.
-  public void testSetDatabasesDbScopedFailureNoChange() {
+  public void testSetDatabasesDbScopedFailureNoChange() throws Exception {
     settableRuntimeConfigFactory
         .globalRuntimeConf()
         .setValue("yb.xcluster.db_scoped.creationEnabled", "true");
@@ -522,7 +570,8 @@ public class DrConfigControllerTest extends PlatformGuiceApplicationBaseTest {
     assertNotNull(drConfig);
     UUID drConfigId = drConfig.getUuid();
     DrConfigSetDatabasesForm setDatabasesData = new DrConfigSetDatabasesForm();
-    setDatabasesData.dbs = new HashSet<>(Set.of(namespaceId));
+    String namespaceId = namespaceIds.get(0);
+    setDatabasesData.dbs = Set.of(namespaceId);
     XClusterConfig xClusterConfig = drConfig.getActiveXClusterConfig();
     xClusterConfig.updateStatus(XClusterConfigStatusType.Running);
     xClusterConfig.updateStatusForNamespace(namespaceId, XClusterNamespaceConfig.Status.Running);
@@ -550,7 +599,7 @@ public class DrConfigControllerTest extends PlatformGuiceApplicationBaseTest {
 
   @Test
   // Runtime config `yb.xcluster.db_scoped.creationEnabled` = true.
-  public void testSetDatabasesDbScopedFailureNoDbs() {
+  public void testSetDatabasesDbScopedFailureNoDbs() throws Exception {
     settableRuntimeConfigFactory
         .globalRuntimeConf()
         .setValue("yb.xcluster.db_scoped.creationEnabled", "true");
@@ -588,14 +637,84 @@ public class DrConfigControllerTest extends PlatformGuiceApplicationBaseTest {
             () ->
                 doRequestWithAuthTokenAndBody(
                     "PUT",
-                    "/api/customers/"
-                        + defaultCustomer.getUuid()
-                        + "/dr_configs/"
-                        + drConfigId
-                        + "/set_dbs",
+                    String.format(
+                        "/api/customers/%s/dr_configs/%s/set_dbs",
+                        defaultCustomer.getUuid(), drConfigId),
                     authToken,
                     Json.toJson(setDatabasesData)));
     assertThat(exception.getMessage(), containsString("error.required"));
+  }
+
+  @Test
+  public void testSetDatabasesDbScopedFailureWithEmptySourceTableNotOnTarget() throws Exception {
+    settableRuntimeConfigFactory
+        .globalRuntimeConf()
+        .setValue("yb.xcluster.db_scoped.creationEnabled", "true");
+
+    namespaceIds.add(UUID.randomUUID().toString().replace("-", ""));
+    DrConfigCreateForm data = createDefaultCreateForm("dbScopedDR", Set.of(namespaceIds.get(0)));
+
+    List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo> sourceTableInfo = new ArrayList<>();
+    for (String namespaceId : namespaceIds) {
+      MasterDdlOuterClass.ListTablesResponsePB.TableInfo.Builder tiBuilder =
+          MasterDdlOuterClass.ListTablesResponsePB.TableInfo.newBuilder()
+              .setTableType(TableType.PGSQL_TABLE_TYPE)
+              .setId(ByteString.copyFromUtf8(UUID.randomUUID().toString()))
+              .setName("table_1")
+              .setRelationType(RelationType.USER_TABLE_RELATION)
+              .setNamespace(
+                  MasterTypes.NamespaceIdentifierPB.newBuilder()
+                      .setName(namespaceId)
+                      .setId(ByteString.copyFromUtf8(namespaceId))
+                      .build());
+      sourceTableInfo.add(tiBuilder.build());
+    }
+
+    ListTablesResponse sourceTableListResponse = mock(ListTablesResponse.class);
+    when(sourceTableListResponse.getTableInfoList()).thenReturn(sourceTableInfo);
+    ListTablesResponse targetTableListResponse = mock(ListTablesResponse.class);
+    when(targetTableListResponse.getTableInfoList()).thenReturn(List.of());
+    when(mockYBClient.getTablesList(nullable(String.class), eq(false), nullable(String.class)))
+        .thenReturn(sourceTableListResponse) // source in create request
+        .thenReturn(sourceTableListResponse) // target in create request
+        .thenReturn(sourceTableListResponse) // source in setDB request
+        .thenReturn(targetTableListResponse); // target in setDB request
+
+    UUID taskUUID = buildTaskInfo(null, TaskType.CreateDrConfig);
+    when(mockCommissioner.submit(any(), any())).thenReturn(taskUUID);
+
+    Result result =
+        doRequestWithAuthTokenAndBody(
+            "POST",
+            "/api/customers/" + defaultCustomer.getUuid() + "/dr_configs",
+            authToken,
+            Json.toJson(data));
+    assertOk(result);
+
+    DrConfigSetDatabasesForm setDatabasesData = new DrConfigSetDatabasesForm();
+    setDatabasesData.dbs = Set.of(namespaceIds.get(0), namespaceIds.get(1));
+    DrConfig drConfig =
+        DrConfig.getBetweenUniverses(
+                sourceUniverse.getUniverseUUID(), targetUniverse.getUniverseUUID())
+            .get(0);
+    XClusterConfig xClusterConfig = drConfig.getActiveXClusterConfig();
+    xClusterConfig.updateStatus(XClusterConfigStatusType.Running);
+    drConfig.setState(State.Replicating);
+    drConfig.update();
+
+    result =
+        assertPlatformException(
+            () ->
+                doRequestWithAuthTokenAndBody(
+                    "PUT",
+                    String.format(
+                        "/api/customers/%s/dr_configs/%s/set_dbs",
+                        defaultCustomer.getUuid(), drConfig.getUuid()),
+                    authToken,
+                    Json.toJson(setDatabasesData)));
+
+    assertForbidden(
+        result, "Some tables are empty on the source universe and don't exist on the target");
   }
 
   private void setupMockGetUniverseReplicationInfo(
@@ -623,8 +742,7 @@ public class DrConfigControllerTest extends PlatformGuiceApplicationBaseTest {
     NamespaceInfoPB namespaceInfo =
         NamespaceInfoPB.newBuilder().setNamespaceId(sourceNamespace).clearTableStreams().build();
     GetXClusterOutboundReplicationGroupInfoResponse mockResponse =
-        new GetXClusterOutboundReplicationGroupInfoResponse(
-            0, "", null, new ArrayList<>(Arrays.asList(namespaceInfo)));
+        new GetXClusterOutboundReplicationGroupInfoResponse(0, "", null, List.of(namespaceInfo));
     when(mockYBClient.getXClusterOutboundReplicationGroupInfo(
             eq(drConfig.getActiveXClusterConfig().getReplicationGroupName())))
         .thenReturn(mockResponse);
@@ -1118,11 +1236,7 @@ public class DrConfigControllerTest extends PlatformGuiceApplicationBaseTest {
     xClusterConfig.update();
 
     // Precheck should succeed.
-    try {
-      drConfigController.pauseUniversesPrechecks(xClusterConfig, sourceUniverse, targetUniverse);
-    } catch (Exception e) {
-      fail();
-    }
+    drConfigController.pauseUniversesPrechecks(xClusterConfig, sourceUniverse, targetUniverse);
 
     // One universe is paused already.
     sourceUniverse.getUniverseDetails().universePaused = true;
@@ -1165,11 +1279,7 @@ public class DrConfigControllerTest extends PlatformGuiceApplicationBaseTest {
     xClusterConfig.setPaused(true);
 
     // Precheck should succeed.
-    try {
-      drConfigController.resumeUniversesPrechecks(xClusterConfig, sourceUniverse, targetUniverse);
-    } catch (Exception e) {
-      fail();
-    }
+    drConfigController.resumeUniversesPrechecks(xClusterConfig, sourceUniverse, targetUniverse);
 
     // One universe is not paused.
     sourceUniverse.getUniverseDetails().universePaused = false;
